[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "wf-market-checker"
version = "0.1.0"
description = "Warframe Market Order Checker"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "aiolimiter>=1.2.1",
    "async-lru>=2.0.5",
    "colorama>=0.4.6",
    "discord-py>=2.6.4",
    "pydantic>=2.12.4",
    "pyperclip>=1.11.0",
    "tomli>=2.4.0",
    "yarl>=1.22.0",
]

[dependency-groups]
dev = ["ruff>=0.14.11"]

[project.scripts]
app = "wf_market_checker.__main__:main"

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "E501",
    "T201",
    "EXE002",
    "ANN204",
    "RUF006",
    "RUF029",
    "S404",
    "S602",
    "TC001",  # False positives with pydantic
    "TC002",  # False positives with pydantic
    "TC003",  # False positives with pydantic

    # Umbra preset
    "ANN401",
    "ASYNC109",
    "COM812",
    "CPY001",
    "D",        # not needed here
    "DOC",
    "INP001",   # due to how I load modules this results in annoyances
    "PD011",    # this is not a numpy codebase
    "PERF203",
    "PLC0414",  # pyright ruling for `as` imports needed
    "PLR0912",
    "PLR0913",
    "PLR2004",  # I hate this rule
    "PLR6301",
    "Q000",
    "RUF001",
    "RUF009",
    "SIM105",
    "TRY003",   # over-eager rule
    "TRY301",   # unrealistic rule
    "UP034",
]
unfixable = [
    "E501", # line length handled in other ways by ruff format
    "ERA",  # Don"t delete commented out code
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
